<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_testing_topnode</name>
  <version>0.0.1</version>
  <description>Extensions to launch_testing to make assertions around node performance</description>

  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>

  <license>Apache License 2.0</license>

  <author email="michael@openrobotics.org">Michael Carroll</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_testing</exec_depend>
  <exec_depend>osrf_pycommon</exec_depend>
  <exec_depend>python3-pytest</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>

  <group_depend>launch_frontend_packages</group_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
